appscore/k8s-config/deployments/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-data
  labels:
    app: user-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-data
  template:
    metadata:
      labels:
        app: user-data
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "4m"
            memory: "500Mi"
          limits:
            cpu: "1"
            memory: "1500Mi"
